force-app/main/default/objects/QuoteViewSetting__c/QuoteViewSetting__c.object-meta.xml
<CustomObject>
    <label>Quote View Setting</label>
    <nameField>
        <displayFormat>QVS-{0000000000}</displayFormat>
        <label>Quote View Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote View Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>