force-app/main/default/objects/QuoteViewSetting__c/fields/CollaboratorUserId__c.field-meta.xml
<CustomField>
    <fullName>CollaboratorUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ViewSettings</relationshipName>
    <type>Lookup</type>
</CustomField>