force-app/main/default/objects/QuoteViewSetting__c/fields/ShowAllSections__c.field-meta.xml
<CustomField>
    <fullName>ShowAllSections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show All Sections</label>
    <type>Checkbox</type>
</CustomField>