force-app/main/default/objects/QuoteViewSetting__c/fields/ShowMargin__c.field-meta.xml
<CustomField>
    <fullName>ShowMargin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Margin</label>
    <type>Checkbox</type>
</CustomField>