force-app/main/default/objects/QuoteViewSetting__c/fields/ShowPhases__c.field-meta.xml
<CustomField>
    <fullName>ShowPhases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Phases</label>
    <type>Checkbox</type>
</CustomField>