force-app/main/default/objects/QuoteViewSetting__c/fields/ShowRevenue__c.field-meta.xml
<CustomField>
    <fullName>ShowRevenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Revenue</label>
    <type>Checkbox</type>
</CustomField>