force-app/main/default/objects/QuoteViewSetting__c/fields/ShowTotals__c.field-meta.xml
<CustomField>
    <fullName>ShowTotals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Totals</label>
    <type>Checkbox</type>
</CustomField>